force-app/main/default/objects/ReportMGRLight__Reports_History_Tracking__c/fields/ReportMGRLight__JSON2__c.field-meta.xml
<CustomField>
    <fullName>ReportMGRLight__JSON2__c</fullName>
    <label>JSON2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>