force-app/main/default/objects/ReportMGRLight__Reports_History_Tracking__c/fields/ReportMGRLight__Type__c.field-meta.xml
<CustomField>
    <fullName>ReportMGRLight__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ArchivedReports</fullName>
            </value>
            <value>
                <fullName>UnarchivedReports</fullName>
            </value>
            <value>
                <fullName>ReportsCount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>