force-app/main/default/objects/ReportMGRLight__Reports_History_Tracking__c/listViews/ReportMGRLight__All.listView-meta.xml
<ListView>
    <fullName>ReportMGRLight__All</fullName>
    <columns>NAME</columns>
    <columns>ReportMGRLight__JSON1__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ReportMGRLight__Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>